Added success messages to PKI model create views
- Added success messages to Truststore, Domain, and Issuing CA Create views
- Fixed failure on adding CA when the CA certificate was already in the database, but not as a CA
- Cursor change on Registration pattern creation template

--- a/trustpoint/trustpoint/locale/de/LC_MESSAGES/django.po
+++ b/trustpoint/trustpoint/locale/de/LC_MESSAGES/django.po
@@ -3262,7 +3262,7 @@ msgstr ""
 "oder Betriebssystems zu importieren."
 
 #: .\templates\setup_wizard\tls_server_credential_apply.html:47
-msgid "Apply TLS-Configurations"
+msgid "Apply TLS configuration"
 msgstr "TLS-Konfiguration anwenden"
 
 #: .\templates\trustpoint\base.html:40
